# rvpkg

./: .gitignore  Cargo.toml  Makefile  Pipfile  README.md  requirements.txt
fs/etc/: rvpkg.toml  rvpkg.yaml
fs/usr/share/: packages.yaml
fs/usr/share/rvpkg/: packages.yaml
src/: main.py  main.rs  package.py  package.rs  rvpkg.py
