[package]
name = "rvpkg"
version = "0.1.0"
authors = ["Michael Rivnak <mrivnak86@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo"
license = "GPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
# postgres = "0.17.5"
# term_size = "1"
toml = "0.5.6"
versions = "1.0.1"